[package]
name = "Omikron"
version = "0.1.0"
edition = "2024"

[dependencies]
ttp-core = { git = "https://github.com/Tensamin/TTP.git", package = "ttp-core" }
ttp-native = { git = "https://github.com/Tensamin/TTP.git", package = "ttp-native" }

ansi_term = "*"
uuid = { version = "*", features = ["v4"] }

base64 = "0.22.1"
dashmap = "*"
futures = "*"
hex = "*"
once_cell = "1.21.3"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom", "std"] }
rustls = { version = "0.23.37", default-features = false, features = [
    "std",
    "tls12",
    "aws-lc-rs",
    "prefer-post-quantum",
] }
sha2 = "*"
tokio = { version = "*", features = ["full"] }
x448 = { version = "*" }
log = "0.4"
dotenv = "0.15.0"
aes-gcm = "0.10.3"
hkdf = "0.12.4"
strum = "0.28.0"
strum_macros = "0.28.0"
livekit-api = { version = "0.4.14", features = ["native-tls"] }
livekit-protocol = "0.7.1"
thiserror = "2.0.18"
